Bug 500432 - Extra language option at the top labeled "C", does nothing
Summary: Extra language option at the top labeled "C", does nothing
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_regionandlang (other bugs)
Version First Reported In: 6.3.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-19 20:13 UTC by Wilbur Jaywright
Modified: 2025-05-03 18:27 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
The C option shown in the languages list (284.88 KB, image/png)
2025-02-19 20:13 UTC, Wilbur Jaywright
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Wilbur Jaywright 2025-02-19 20:13:01 UTC
Created attachment 178608 [details]
The C option shown in the languages list

SUMMARY
In the Region & Language settings, under Language, I can change the language to an option at the top of the list labeled "C." This change does save, but once I go back out of Language to all the R&L settings, it shows whatever language I had set before. The change only shows within the Language setting, and did not raise an error.

STEPS TO REPRODUCE
1. Open System Settings.
2. Go to Region & Language
3. Click the Language "Modify..." button.
4. Click "Change Language."

OBSERVED RESULT
At the top of the languages list, there is an option labeled "C". Choosing it has no effect aside from saving within the Language Modify screen.

EXPECTED RESULT
All languages in the list are spoken languages and affect the system as a whole.

SOFTWARE/OS VERSIONS
Windows: No.
macOS: No.
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Fedora 41 x64
KDE Plasma Version: 6.3.0
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2

ADDITIONAL INFORMATION
This is the KDE Plasma spin of Fedora, installed fresh yesterday.
Comment 1 TraceyC 2025-02-19 21:16:40 UTC
Confirmed on git-master.
Comment 2 hanyoung 2025-02-20 14:46:17 UTC
can confirm, it seems that we forgot to add glibc mappings for locale "C". The C locale is saved to "Translations" but not to "Formats" in ~/.config/plasma-localerc
Comment 3 Bug Janitor Service 2025-02-22 15:15:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5248
Comment 4 Tobias Zwick 2025-04-29 17:56:33 UTC
Possibly related: https://bugs.kde.org/show_bug.cgi?id=438290
Comment 5 hanyoung 2025-04-30 10:40:24 UTC
Git commit c9ee2931f9f13f0f1f3c03ccd6040648422b0c0a by Han Young.
Committed on 30/04/2025 at 10:40.
Pushed by hanyoung into branch 'master'.

kcm_regionandlang: add locale C to mapping and always set LANG and LC_*

Add locale C to glibc mappings so that locale C is actually saved to config file

Also set LC_* whenever LANG is set, this ensure LC_* are always up to date. In previous logic, LC_* can become out of sync if user change LANG to something else than changed it back.

M  +2    -6    kcms/region_language/kcmregionandlang.cpp
M  +1    -1    kcms/region_language/languagelistmodel.cpp
M  +3    -21   kcms/region_language/optionsmodel.cpp
M  +16   -8    kcms/region_language/regionandlangsettings.cpp
M  +1    -1    kcms/region_language/regionandlangsettings.h
M  +0    -4    kcms/region_language/regionandlangsettingsbase.kcfg

https://invent.kde.org/plasma/plasma-workspace/-/commit/c9ee2931f9f13f0f1f3c03ccd6040648422b0c0a