kcm_regionandlang: add locale C to mapping and always set LANG and LC_*

BUG: 500432

Add locale C to glibc mappings so that locale C is actually saved to config file

Also set LC_* whenever LANG is set, this ensure LC_* are always up to date. In previous logic, LC_* can become out of sync if user change LANG to something else than changed it back.